--- a/index.html
+++ b/index.html
@@ -2,17 +2,11 @@
 <html id="home" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Jake Harvanchik</title>
     <link rel="stylesheet" href="/assets/styles/styles.css" />
     <!-- Scripts -->
-    <script
-      defer
-      src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
-    ></script>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <style>
       section#about-me {
         background-color: #f0f0f0;
@@ -24,51 +18,27 @@
   <!-- START: Page -->
   <body class="min-h-screen">
     <!-- START: Header -->
-    <section
-      class="bg-gradient-to-br from-cyan-400/60 via-cyan-500/80 to-cyan-500 text-white"
-    >
+    <section class="bg-gradient-to-br from-cyan-400/60 via-cyan-500/80 to-cyan-500 text-white">
       <!-- START: Navigation -->
-      <div
-        class="layout border-gray-100/50 flex flex-row justify-between pt-5 pb-5 border-b"
-      >
+      <div class="layout flex flex-row justify-between border-b border-gray-100/50 pt-5 pb-5">
         <!-- START: Logo -->
         <div class="my-auto text-3xl font-semibold tracking-tighter">JLH</div>
         <!-- END: Logo -->
         <!-- START: Nav Links -->
-        <nav class="gap-x-10 flex flex-row my-auto tracking-tight">
-          <a
-            href="#"
-            class="text-opacity-70 hover:text-opacity-100 text-gray-100 transition-opacity duration-200"
-            >About Me</a
-          >
-          <a
-            href="#"
-            class="text-gray-100/70 hover:text-gray-100 transition-opacity duration-200"
-            >Experience</a
-          >
-          <a
-            href="#"
-            class="text-gray-100/70 hover:text-gray-100 transition-opacity duration-200"
-            >Projects</a
-          >
-          <a
-            href="#"
-            class="text-gray-100/70 hover:text-gray-100 transition-opacity duration-200"
-            >Contact</a
-          >
+        <nav class="my-auto flex flex-row gap-x-10 tracking-tight">
+          <a href="#" class="text-gray-100 text-opacity-70 transition-opacity duration-200 hover:text-opacity-100">About Me</a>
+          <a href="#" class="text-gray-100/70 transition-opacity duration-200 hover:text-gray-100">Experience</a>
+          <a href="#" class="text-gray-100/70 transition-opacity duration-200 hover:text-gray-100">Projects</a>
+          <a href="#" class="text-gray-100/70 transition-opacity duration-200 hover:text-gray-100">Contact</a>
         </nav>
         <!-- END: Nav Links -->
       </div>
       <!-- END: Navigation -->
       <!-- START: Introduction -->
       <div class="layout flex flex-col">
-        <h1 class="py-52 flex flex-col text-white">
-          <span class="text-3xl font-semibold tracking-tight"
-            >Hello, World! My name is</span
-          >
-          <span class="text-8xl font-extrabold tracking-tighter uppercase"
-            >Jake Harvanchik</span
-          >
+        <h1 class="flex flex-col py-52 text-white">
+          <span class="text-3xl font-semibold tracking-tight">Hello, World! My name is</span>
+          <span class="text-8xl font-extrabold uppercase tracking-tighter">Jake Harvanchik</span>
         </h1>
       </div>
       <!-- END: Introduction -->
@@ -77,19 +47,13 @@
     <!-- END: Header -->
 
     <!-- START: Header -->
-    <section
-      hidden
-      id="header"
-      class="bg-gradient-to-b from-white/80 via-white/75 px-20 py-10 text-lg font-semibold"
-    >
+    <section hidden id="header" class="bg-gradient-to-b from-white/80 via-white/75 px-20 py-10 text-lg font-semibold">
       <div class="layout flex max-w-[92rem] flex-row justify-between">
         <!-- START: Logo -->
         <div class="my-auto text-4xl">JH</div>
         <!-- END: Logo -->
         <!-- START: Navigation -->
-        <nav
-          class="my-auto flex flex-row gap-x-12 font-handwriting text-[1.7rem]"
-        >
+        <nav class="my-auto flex flex-row gap-x-12 font-handwriting text-[1.7rem]">
           <a href="#">About Me</a>
           <a href="#">Experience</a>
           <a href="#">Contact</a>
@@ -102,32 +66,20 @@
     <section hidden id="hero" class="layout mx-auto mt-[7.8rem]">
       <div class="flex flex-col">
         <h1
-          class="bg-gradient-to-r from-blue-400 to-blue-700 bg-clip-text text-8xl brightness-125 text-shadow-sm font-extrabold tracking-tighter text-transparent uppercase"
-        >
+          class="bg-gradient-to-r from-blue-400 to-blue-700 bg-clip-text text-8xl font-extrabold uppercase tracking-tighter text-transparent brightness-125 text-shadow-sm">
           Jake Harvanchik
         </h1>
-        <p
-          class="font-handwriting text-4xl font-semibold text-blue-600 uppercase"
-        >
-          welcome to my portfolio
-        </p>
+        <p class="font-handwriting text-4xl font-semibold uppercase text-blue-600"> welcome to my portfolio </p>
       </div>
     </section>
     <!-- END: Hero -->
     <!-- START: About Me -->
-    <section
-      hidden
-      id="about-me"
-      class="mt-[13rem] bg-blue-600 py-10 text-xl text-white"
-    >
+    <section hidden id="about-me" class="mt-[13rem] bg-blue-600 py-10 text-xl text-white">
       <div class="layout mx-auto">
         <a href="#about-me">
           <h2 class="font-handwriting text-5xl uppercase">About Me</h2>
         </a>
-        <p class="mt-2">
-          I am a college student majoring in Computer Science at California
-          State University, Fullerton.
-        </p>
+        <p class="mt-2"> I am a college student majoring in Computer Science at California State University, Fullerton. </p>
       </div>
     </section>
     <!-- END: About Me -->
