--- a/resume/index.html
+++ b/resume/index.html
@@ -17,6 +17,7 @@
   <!-- TODO: fix text not being smaller in print version -->
 
   <body
+    x-init="console.log('Loaded resume version', version)"
     x-data="{ version: new URLSearchParams(location.search).get('v') || '1' }"
     class="layout relative mx-auto h-full max-w-[750px] pt-10 pb-80 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs xs:text-sm">
     <!-- START: Page -->
@@ -25,47 +26,47 @@
       <section id="header" class="flex flex-col text-center">
         <h1 class="text-xl font-bold print:text-base">Jake Harvanchik</h1>
         <a href="https://goo.gl/maps/mQ9rL8scAhPr5SRJ6" target="_blank" class="mx-auto">Stevenson Ranch, California 91381</a>
-        <p class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 print:max-w-none print:text-[10px] md:max-w-none">
+        <span class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 print:max-w-none print:text-[10px] md:max-w-none">
           <!-- START: Cell Number -->
           <a href="tel:+16618033757" class="flex flex-row gap-x-1">
-            <i class="fa-solid fa-phone my-auto"></i>
+            <i class="my-auto fa-solid fa-phone"></i>
             <span class="my-auto">(661) 803-3757</span>
           </a>
           <!-- END: Cell Number -->
           <span class="hidden print:inline md:inline">|</span>
           <!-- START: Email Address -->
           <a href="mailto:resume@harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
-            <i class="fa-solid fa-envelope my-auto"></i>
+            <i class="my-auto fa-solid fa-envelope"></i>
             <span class="my-auto">resume@harvanchik.me</span>
           </a>
           <!-- END: Email Address -->
-          <template x-if="version === '1'">
+          <div x-cloak x-show="version === '1'" class="flex flex-row space-x-1">
             <span class="hidden print:inline md:inline">|</span>
             <!-- START: Online Portfolio -->
             <a href="https://jake.harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
-              <i class="fa-solid fa-laptop-code my-auto"></i>
+              <i class="my-auto fa-solid fa-laptop-code"></i>
               <span class="my-auto">jake.harvanchik.me</span>
             </a>
-          </template>
+          </div>
           <!-- END: Online Portfolio -->
           <span class="hidden md:inline">|</span>
           <!-- START: Linked In -->
           <a href="https://www.linkedin.com/in/harvanchik" target="_blank" class="flex flex-row gap-x-1">
-            <i class="fa-brands fa-linkedin-in my-auto"></i>
-            <span class="my-auto hidden print:inline">linkedin.com/in/harvanchik</span>
-            <span class="my-auto inline print:hidden">harvanchik</span>
+            <i class="my-auto fa-brands fa-linkedin-in"></i>
+            <span class="hidden my-auto print:inline">linkedin.com/in/harvanchik</span>
+            <span class="inline my-auto print:hidden">harvanchik</span>
           </a>
           <!-- END: Linked In -->
-          <template x-if="version === '1'">
+          <div x-cloak x-show="version === '1'" class="flex flex-row space-x-1">
             <span class="hidden print:inline md:inline">|</span>
             <!-- START: GitHub -->
             <a href="https://github.com/harvanchik" target="_blank" class="flex flex-row gap-x-1">
-              <i class="fa-brands fa-github my-auto"></i>
+              <i class="my-auto fa-brands fa-github"></i>
               <span class="my-auto">harvanchik</span>
             </a>
-          </template>
+          </div>
           <!-- END: GitHub -->
-        </p>
+        </span>
       </section>
       <!-- END: Header -->
 
@@ -78,7 +79,7 @@
               <p class="font-bold">Bachelor of Science, Computer Science</p>
               <a href="https://www.fullerton.edu" target="_blank" class="italic"> California State University, Fullerton </a>
             </div>
-            <div class="flex min-w-max flex-col text-right">
+            <div class="flex flex-col text-right min-w-max">
               <p class="hidden xs:inline">Expected May 2023</p>
               <p class="xs:hidden">Exp. May '23</p>
               <p>Fullerton, CA</p>
@@ -89,11 +90,11 @@
       <!-- END: Education -->
 
       <!-- START: Related Courses -->
-      <template x-if="version === '1'">
+      <template x-cloak x-show="version === '1'">
         <section id="related-courses">
           <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Related Courses </h2>
           <div class="flex flex-col gap-y-1.5">
-            <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
+            <ul class="w-full ml-4 list-disc columns-2 gap-x-20">
               <li class="min-w-max">
                 <span class="hidden min-w-max xs:inline">Object-Oriented Programming</span>
                 <span class="xs:hidden">Object Oriented Program.</span>
@@ -118,11 +119,11 @@
       <!-- END: Related Courses -->
 
       <!-- START: Technical Skills -->
-      <template x-if="version === '1'">
+      <template x-cloak x-show="version === '1'">
         <section id="technical-skills">
           <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Technical Skills </h2>
           <div class="flex flex-col gap-y-1.5">
-            <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
+            <ul class="w-full ml-4 list-disc columns-2 gap-x-20">
               <li>
                 <span class="font-bold">Languages:</span>
                 <a href="https://www.java.com" target="_blank">Java,</a>
@@ -173,7 +174,7 @@
                 <p class="font-bold">Junior Software Developer</p>
                 <a href="https://didintegration.com" target="_blank" class="italic">DiD Integration, Inc.</a>
               </div>
-              <div class="font-xs sm:font-sm flex min-w-max flex-col text-right">
+              <div class="flex flex-col text-right font-xs sm:font-sm min-w-max">
                 <p class="hidden xs:inline">July 2020 - November 2021</p>
                 <p class="xs:hidden">July '20 - Nov. '21</p>
                 <p>Valencia, CA</p>
@@ -198,7 +199,7 @@
                 <p class="font-bold">Residential Advisor (RA)</p>
                 <a href="https://reslife.okstate.edu" target="_blank" class="italic"> Housing and Residential Life </a>
               </div>
-              <div class="flex min-w-max flex-col text-right">
+              <div class="flex flex-col text-right min-w-max">
                 <p class="hidden xs:inline">August 2019 - March 2020</p>
                 <p class="xs:hidden">Aug. '19 - March '20</p>
                 <p>Stillwater, OK</p>
@@ -214,7 +215,7 @@
           <!-- END: Residential Advisor -->
           <!-- TODO: Conditionally display this based on url parameters -->
           <!-- START: Summer Camp Counselor -->
-          <template x-if="version === '2'">
+          <template x-cloak x-show="version === '2'">
             <div class="flex flex-col gap-y-1">
               <div class="flex flex-row justify-between">
                 <div class="flex flex-col">
@@ -223,7 +224,7 @@
                     Cadence Academy (Sunshine)
                   </a>
                 </div>
-                <div class="flex min-w-max flex-col text-right">
+                <div class="flex flex-col text-right min-w-max">
                   <p class="hidden xs:inline">June 2019 - August 2019</p>
                   <p class="xs:hidden">June '19 - Aug. '19</p>
                   <p>Valencia, CA</p>
@@ -242,7 +243,7 @@
                 <p class="font-bold">Intramural Sports Supervisor</p>
                 <a href="https://wellness.okstate.edu/competitive-sports" target="_blank" class="italic"> Department of Wellness </a>
               </div>
-              <div class="flex min-w-max flex-col text-right">
+              <div class="flex flex-col text-right min-w-max">
                 <p class="hidden xs:inline">August 2018 - March 2020</p>
                 <p class="xs:hidden">Aug. '18 - March '20</p>
                 <p>Stillwater, OK</p>
@@ -264,7 +265,7 @@
       </section>
       <!-- END: Work Experience -->
       <!-- START: Projects -->
-      <template x-if="version === '1'">
+      <template x-cloak x-show="version === '1'">
         <section id="projects">
           <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Projects </h2>
           <div class="flex flex-col gap-y-1.5">
@@ -275,7 +276,7 @@
                   <p class="font-bold">Blockey Hockey</p>
                   <p class="italic"> Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, Github Pages </p>
                 </div>
-                <div class="flex min-w-max flex-col text-right">
+                <div class="flex flex-col text-right min-w-max">
                   <p class="hidden xs:inline">Since December 2014</p>
                   <p class="xs:hidden">Since Dec. '14</p>
                 </div>
@@ -306,7 +307,7 @@
                     <a href="https://github.com/tiberiuzuld/angular-gridster2" target="_blank">Gridster API</a>
                   </p>
                 </div>
-                <div class="flex min-w-max flex-col text-right">
+                <div class="flex flex-col text-right min-w-max">
                   <p class="hidden xs:inline">August - November 2021</p>
                   <p class="xs:hidden">Aug. - Nov. '21</p>
                 </div>
